Small enhancement
